Language files update

--- a/resourcepacks/calamity/assets/calamity/lang/es_es.json
+++ b/resourcepacks/calamity/assets/calamity/lang/es_es.json
@@ -1,64 +1,82 @@
 {
-    "arena.calamity.author": "Moesh",
-    "arena.calamity.icon": "z",
-    "arena.calamity.name": "Calamity",
-    "arena.shattering.author": "Moesh",
-    "arena.shattering.icon": "x",
-    "arena.shattering.name": "Fragmentaci\u00f3n",
-    "book.pageIndicator": "\u00a7d\u00a7ov5.0.0",
+    "death.attack.outOfWorld": "%1$s sucumbió a la calamidad",
+    "commands.trigger.failed.unprimed": "Ahora mismo no se puede usar este comando",
+    "map.name": "Calamity",
     "by.author": "por %s",
-    "calamity.book.cancelStart": "cancelar",
-    "calamity.book.forfeit": "Rendirse",
-    "calamity.book.hover.cancel": "Cancelar partida",
-    "calamity.book.hover.forfeit": "Vota para rendirte [\/trigger gg]",
+    "map.author": "Moesh",
+    "map.author.hover.link": "Haz click para ver enlace",
+    "arena.calamity.name": "Calamity",
+    "arena.calamity.author": "Moesh",
+    "arena.shattering.name": "Fragmentación",
+    "arena.shattering.author": "Moesh",
+    "spacer.brackets.left": " (%s)",
+    "spacer.left": " %s",
+    "spacer.right": "%s ",
+    "spacer.middle": "%s %s",
+    "system.message": ">>> %s",
+    "team.blue": "Azul",
+    "team.red": "Rojo",
+    "team.spectator": "Espectador",
+    "calamity.book.cancelStart": "Cancelar",
+    "calamity.book.hover.cancel": "Cancelar el inicio de la partida",
     "calamity.book.hover.joinBlue": "Unirse al equipo Azul",
     "calamity.book.hover.joinRed": "Unirse al equipo Rojo",
-    "calamity.book.hover.leaveTeam": "Abandonar tu equipo. Te unir\u00e1s a un equipo aleatorio.",
-    "calamity.book.hover.notPlaying": "No jugar\u00e1s en la pr\u00f3xima partida",
-    "calamity.book.hover.readyTeam": "Indicar si tu equipo est\u00e1 o no est\u00e1 listo",
-    "calamity.book.hover.resetSpawnItem": "Volver a escoger con qu\u00e9 objeto reapareces",
-    "calamity.book.hover.shuffle.allPlayers": "Shuffle all players, except spectators",
-    "calamity.book.hover.shuffle.restOfPlayers": "Shuffle players who are not on a team",
+    "calamity.book.hover.notPlaying": "No jugarás en la próxima partida",
     "calamity.book.hover.start": "Empezar partida en 15 segundos",
-    "calamity.book.leaveTeam": "Abandona tu equipo",
+    "calamity.book.leaveTeam": "Abandonar equipo",
     "calamity.book.li.li": "  + ",
-    "calamity.book.li": "\u2022 ",
-    "calamity.book.matchOptions.title": "Opciones de partida:",
-    "calamity.book.objective.1": "Para obtener puntos, captura recursos, lucha contra tus enemigos o craftea objetos con lingotes de hierro. \u00a1El primer equipo que llegue al objetivo de puntos gana!",
-    "calamity.book.objective.2": "Los puntos necesarios para ganar bajan seg\u00fan la cantidad restante de hierro en las minas.",
+    "calamity.book.li": "• ",
+    "calamity.book.objective.1": "Gana puntos capturando recursos, peleando o fabricando objetos con lingotes de hierro. ¡El primer equipo en alcanzar la cuota de puntuación gana!",
+    "calamity.book.objective.2": "Los puntos necesarios para ganar bajan al extraer hierro de las minas centrales.",
     "calamity.book.objective.title": "Objetivo:",
-    "calamity.book.readyTeam": "Equipo Listo",
-    "calamity.book.resetSpawnItem": "Reelige objeto permanente",
     "calamity.book.selectArena.title": "Seleccionar arena: ",
-    "calamity.book.shuffle.all": "todos",
-    "calamity.book.shuffle.rest": "restantes",
-    "calamity.book.shuffle": "Mezclar jugadores:",
     "calamity.book.spectate": "Ser espectador",
     "calamity.book.start": "Empezar",
+    "spacer.or": "%s o %s",
     "calamity.book.teams": "Equipo:",
-    "calamity.book.title": "Calamity por Moesh",
-    "calamity.book.toggleGamemode.hover": "Cambiar modo de juego entre espectador y aventura",
-    "calamity.book.toggleGamemode": "Modo de juego",
-    "calamity.cheated.yourself": "Simplemente no cheatees y listo bro, no es tan dif\u00edcil.",
-    "calamity.click.here": "aqu\u00ed",
-    "calamity.enchanted.item": "Enchanted Item",
+    "calamity.book.title": "Calamity, por Moesh",
+    "calamity.book.matchOptions.title": "Opciones de partida:",
+    "calamity.book.forfeit": "Rendirse",
+    "calamity.book.resetSpawnItem": "Reeligir objeto permanente",
+    "calamity.book.hover.resetSpawnItem": "Volver a escoger con qué objeto reapareces",
+    "calamity.book.hover.forfeit": "Vota para rendirte [%s]",
+    "calamity.cheated.yourself": "Habrás engañado al juego, pero a qué precio. No has aprendido. No has mejorado. Tomando un atajo no ganas nada. Ese sentimiento de victoria es completamente vacío. Sin nada que ganar, ni que perder. Me decepciona que no veas la diferencia.",
     "calamity.feature.notAvailable": "No disponible",
-    "calamity.forfeit.draw": "\u00a1Empate!",
-    "calamity.forfeit.retracted.stopped": "%s ha retirado su voto de rendici\u00f3n. Se ha cancelado la votaci\u00f3n.",
-    "calamity.forfeit.retracted": "%s ha retirado su voto de rendici\u00f3n. %s de los %s jugadores del equipo necesarios han votado a favor de rendirse.",
-    "calamity.forfeit.started": "%s ha votado a favor de la rendici\u00f3n. %s de los %s jugadores del equipo necesarios han votado a favor de rendirse. Usa [%s] para votar.",
-    "calamity.forfeit": "\u00a1El Equipo %s %s se ha rendido!",
-    "calamity.generator.enchantedItem.alreadyEnchanted": "Item already has this enchantment.",
-    "calamity.generator.enchantedItem.announced.invalid": "%s %s attempted to enchant an item and failed!",
-    "calamity.generator.enchantedItem.announced": "\u00a1Un %s ha sido creado por %s %s!",
-    "calamity.generator.enchantedItem.invalid": "No tienes un objeto encantable en la mano. Toma, un %s.",
-    "calamity.generator.enchantedItem.valid": "\u00a1Objeto encontrado! Has obtenido %s.",
-    "calamity.generator.output.attackedEffect": "Hab\u00e9is recibido [%s%3$s] durante %s segundos",
+    "calamity.forfeit.draw": "¡Empate!",
+    "calamity.forfeit.retracted.stopped": "%s ha retirado su voto de rendición. Se ha cancelado la votación.",
+    "calamity.forfeit.retracted": "%s ha retirado su voto de rendición. %s de los %s jugadores del equipo necesarios han votado a favor de rendirse.",
+    "calamity.forfeit.started": "%s ha votado a favor de la rendición. %s de los %s jugadores del equipo necesarios han votado a favor de rendirse. Usa [%s] para votar.",
+    "calamity.forfeit": "¡El Equipo %s %s se ha rendido!",
+    "calamity.hover.sendTriggerCommand": "Haz click para mandar este comando al chat",
+    "calamity.hover.viewGitHub": "Haz click para ver el repositorio en GitHub",
+    "calamity.joined.team": "%s se ha unido al Equipo %s",
+    "calamity.left.team": "%s ha abandonado el Equipo %s",
+    "calamity.match.cancelled.byPlayer": "%s %s ha cancelado la partida",
+    "calamity.match.cancelled.noPlayers": "Es necesario que haya al menos un jugador en cada equipo para empezar",
+    "calamity.match.cancelled": "Partida %s cancelada",
+    "calamity.match.stats": "%1$s a %2$s. ¡El Equipo %3$s %4$s ha ganado por %5$s puntos en %6$s!",
+    "calamity.notReady": "No listo",
+    "calamity.out.of.bounds": "¡Estás fuera de límites!",
+    "calamity.player.sidelined": "Han mandado a %s al banquillo. Nada más ha cambiado. ¡La partida continúa!",
+    "calamity.points": "+%s puntos",
+    "calamity.prestige.blueForfeit.blue": "Habéis conservado vuestra dignidad",
+    "calamity.prestige.blueForfeit.red": "¡El equipo Azul ha tenido suficiente!",
+    "calamity.prestige.lost": "Derrota por %s puntos",
+    "calamity.prestige.redForfeit.blue": "El Equipo Rojo opta por una retirada digna",
+    "calamity.prestige.redForfeit.red": "Una retirada a tiempo es una victoria",
+    "calamity.prestige.won": "Victoria por %s puntos",
+    "calamity.ready": "Listo",
+    "calamity.reset.map": "Usa [%s] para jugar de nuevo.",
+    "calamity.resetItems.alreadyChosen": "Ya has seleccionado esta opción.",
+    "calamity.resetItems.haventChosen": "Todavía no has escogido ningún objeto.",
+    "calamity.resetItems": "Podrás elegir un objeto diferente la próxima vez que reaparezcas.",
+    "calamity.resetting": "Restableciendo el mapa",
+    "calamity.generator.output.attackedEffect": "Habéis recibido [%s%3$s] durante %s segundos",
     "calamity.generator.output.attackEffect": "El enemigo ha recibido [%s%3$s] durante %s segundos",
     "calamity.generator.output.effect.level2": " II",
-    "calamity.generator.output.effect": "Hab\u00e9is obtenido [%s%3$s] durante %s segundos",
+    "calamity.generator.output.effect": "Habéis obtenido [%s%3$s] durante %s segundos",
     "calamity.generator.output.item": "Has obtenido [%s] * %s",
-    "calamity.generator.sign.activated": "\u00a1Activado!",
+    "calamity.generator.sign.activated": "¡Activado!",
     "calamity.generator.sign.attack": "Ataque de %ss",
     "calamity.generator.sign.enchant": "Mano principal",
     "calamity.generator.sign.perPlayer": "%s por jugador",
@@ -71,70 +89,54 @@
     "calamity.generator.statusMessage.chargeSeconds": "Cargando: %s segundos restantes",
     "calamity.generator.statusMessage.resettingSecond": "Reiniciando: %s segundo restante",
     "calamity.generator.statusMessage.resettingSeconds": "Reiniciando: %s segundos restantes",
-    "calamity.goal": "L\u00ednea de meta",
-    "calamity.hover.discord.DinnerPartyGames": "Unirse al Discord de Dinner Party Games",
-    "calamity.hover.moesh.github": "Ir a github.com\/Moesh",
-    "calamity.hover.moesh.twitter": "Ir a twitter.com\/HeartlessMoesh",
-    "calamity.hover.sendTriggerCommand": "Haz click para mandar el comando a tu chat",
-    "calamity.hover.viewGitHub": "Haz click para ver el repositorio en GitHub",
-    "calamity.joined.team": "%s se ha unido al Equipo %s",
-    "calamity.left.team": "%s ha abandonado la esperanza",
-    "calamity.match.cancelled.byPlayer": "%s \u23f9 ha cancelado la partida",
-    "calamity.match.cancelled.noPlayers": "Es necesario que haya al menos un jugador en cada equipo para empezar",
-    "calamity.match.cancelled": "Partida \u23f9 cancelada",
-    "calamity.match.started.byPlayer": "%s %s ha empezado la partida",
-    "calamity.match.stats": "%1$s a %2$s. \u00a1El Equipo %3$s %4$s ha ganado por %5$s puntos!",
-    "calamity.notReady": "No listo",
-    "calamity.out.of.bounds": "\u00a1Est\u00e1s fuera de l\u00edmites!",
-    "calamity.player.sessionID.mismatch": "SessionID mismatch. You will be processed as a new player.",
-    "calamity.player.sidelined": "Han mandado a %s al banquillo. Nada m\u00e1s ha cambiado. \u00a1La partida contin\u00faa!",
-    "calamity.points": "%s: +%s puntos",
-    "calamity.prestige.blueForfeit.blue": "Hab\u00e9is conservado vuestra dignidad",
-    "calamity.prestige.blueForfeit.red": "\u00a1El equipo Azul ha tenido suficiente!",
-    "calamity.prestige.lost": "Derrota por %s puntos",
-    "calamity.prestige.redForfeit.blue": "El Equipo Rojo opta por una retirada digna",
-    "calamity.prestige.redForfeit.red": "Una retirada a tiempo es una victoria",
-    "calamity.prestige.won": "Victoria por %s puntos",
-    "calamity.ready": "Listo",
-    "calamity.reset.map": "Usa [%s] para jugar de nuevo.",
-    "calamity.resetItems.alreadyChosen": "Ya has seleccionado esta opci\u00f3n.",
-    "calamity.resetItems.haventChosen": "Todav\u00eda no has escogido un objeto.",
-    "calamity.resetItems": "Podr\u00e1s reelegir tu objeto la pr\u00f3xima vez que reaparezcas.",
-    "calamity.resetting": "Restableciendo el mapa",
-    "calamity.seekGlory": "\u00a1Buscad gloria ante la calamidad!",
-    "calamity.select.respawnItem": "Selecciona tu objeto permanente usando una de las herramientas.",
-    "calamity.shuffle.error.noAvailablePlayers": "No players are available to be shuffled.",
-    "calamity.shuffle.newTeam": "%s: %s",
-    "calamity.shuffle.newTeamAdditions": "Shuffled to %s: %s",
-    "calamity.shuffle.playerShuffled.all": "%s shuffled all players",
-    "calamity.shuffle.playerShuffled.rest": "%s shuffled players who were not on a team",
+    "calamity.seekGlory": "¡Alcanzad la gloria o sucumbid a la calamidad!",
     "calamity.sidelines": "%s se ha ido al banquillo",
     "calamity.startMatch.countdown.lastFiveSeconds": "%s...",
-    "calamity.startMatch.countdown": "La partida \u25b6 empieza en %s segundos",
-    "calamity.subtitle.announcer": "Announcer speaks",
+    "calamity.startMatch.countdown": "La partida ▶ empieza en %s segundos",
     "calamity.subtitle.eye.release": "Ojo abierto",
     "calamity.subtitle.eye.squish": "Ojo pisoteado",
     "calamity.team.notReady.blue": "El equipo %s %s necesita tiempo para pensar %s",
     "calamity.team.notReady.red": "El equipo %s %s no ha terminado sus maquinaciones %s",
-    "calamity.team.ready": "El equipo %s %s est\u00e1 listo %s",
-    "calamity.troll": "\u00a1%s se ha ca\u00eddo por el agujero trolero! \u00a1Qu\u00e9 verg\u00fcenza!",
-    "calamity.welcome.objective": "Objetivo: Llegar a la meta de puntos. Haz click aqu\u00ed %s para m\u00e1s informaci\u00f3n detallada.",
-    "calamity.welcome": "\u00a1Se os da la bienvenida a Calamity: Edici\u00f3n Definitiva! Mapa creado por Moesh.",
-    "commands.trigger.failed.unprimed": "Ahora mismo no se puede usar este comando",
-    "death.attack.outOfWorld": "%1$s sucumbi\u00f3 a la calamidad",
-    "map.author.hover.link": "Haz click para ver enlace",
+    "calamity.team.ready": "El equipo %s %s está listo %s",
+    "calamity.troll": "¡%s se ha caído por el bujero trolero! ¡Qué vergüenza!",
+    "calamity.welcome.objective": "Objetivo: Llegar a la meta de puntos. Haz click %s para más información!",
+    "calamity.welcome": "¡Se os da la bienvenida a Calamity: Edición Definitiva! Mapa creado por Moesh.",
+    "book.pageIndicator": "§d§ov5.0.0",
     "map.author.name": "Moesh",
-    "map.author": "Moesh",
-    "map.name": "Calamity",
-    "spacer.brackets.left": " (%s)",
+    "arena.calamity.icon": "z",
+    "arena.shattering.icon": "x",
+    "calamity.book.hover.readyTeam": "Alternar entre Listo/Espe",
+    "calamity.book.readyTeam": "Equipo Listo",
+    "calamity.match.started.byPlayer": "%s %s ha empezado la partida",
+    "calamity.book.hover.leaveTeam": "Abandonar tu equipo. Te unirás a un equipo aleatorio.",
+    "calamity.book.shuffle": "Mezclar jugadores:",
+    "calamity.book.shuffle.all": "todos",
+    "calamity.book.shuffle.rest": "restantes",
+    "calamity.click.here": "aquí",
+    "translator.name": "Moesh",
+    "calamity.generator.enchantedItem.valid": "¡Objeto encontrado! Has obtenido %s.",
+    "calamity.generator.enchantedItem.invalid": "No tienes un objeto encantable en la mano. Toma, un %s.",
+    "calamity.generator.enchantedItem.announced": "¡Un %s ha sido creado por %s %s!",
+    "calamity.book.toggleGamemode": "Modo de juego",
+    "calamity.book.toggleGamemode.hover": "Cambiar modo de juego entre espectador y aventura",
+    "calamity.goal": "Línea de meta",
+    "calamity.hover.moesh.twitter": "Ir a twitter.com/HeartlessMoesh",
+    "calamity.hover.moesh.github": "Ir a github.com/Moesh",
+    "calamity.hover.discord.DinnerPartyGames": "Unirse al Discord de Dinner Party Games",
+    "calamity.select.respawnItem": "Selecciona tu objeto permanente usando una de las herramientas.",
+    "calamity.enchanted.item": "Objeto Encantado",
+    "calamity.shuffle.error.noAvailablePlayers": "Todos los jugadores ya están en un equipo.",
+    "calamity.book.hover.shuffle.restOfPlayers": "Asignar a los jugadores que no estén en un equipo",
+    "calamity.book.hover.shuffle.allPlayers": "Asignar a todos los jugadores (Excepto espectadores)",
+    "calamity.shuffle.newTeamAdditions": "Se asignó a %s: %s",
+    "calamity.shuffle.newTeam": "%s: %s",
+    "calamity.shuffle.playerShuffled.rest": "%s reasignó a los jugadores que no estuviesen en un equipo",
+    "calamity.shuffle.playerShuffled.all": "%s reasignó a todos los jugadores",
+    "calamity.player.sessionID.mismatch": "Tu ID de sesión no coincide con la partida actual. Se te tratará como un jugador nuevo.",
+    "calamity.subtitle.announcer": "Voz de comentarista",
     "spacer.colon": "%s: %s",
-    "spacer.left": " %s",
-    "spacer.middle": "%s %s",
-    "spacer.or": "%s o %s",
-    "spacer.right": "%s ",
-    "system.message": ">>> %s",
-    "team.blue": "Azul",
-    "team.red": "Rojo",
-    "team.spectator": "Espectador",
-    "translator.name": "Moesh"
+    "calamity.generator.enchantedItem.alreadyEnchanted": "El objeto ya tiene este encantamiento",
+    "calamity.generator.enchantedItem.announced.invalid": "%s %s falló al encantar un objeto!",
+    "calamity.arena.error.sameArena": "This arena is already selected",
+    "calamity.arena.error.cooldown": "Arena selection is on cooldown"
 }
