--- a/resourcepacks/calamity/assets/calamity/lang/fr_fr.json
+++ b/resourcepacks/calamity/assets/calamity/lang/fr_fr.json
@@ -5,107 +5,136 @@
     "arena.shattering.author": "Moesh",
     "arena.shattering.icon": "x",
     "arena.shattering.name": "Shattering",
-    "book.pageIndicator": "\u00a7d\u00a7ov5.0.0",
+    "book.pageIndicator": "§d§ov5.0.0",
     "by.author": "par %s",
-    "calamity.book.cancelStart": "annuler",
-    "calamity.book.forfeit": "D\u00e9clarer forfait",
-    "calamity.book.hover.cancel": "annuler le match",
-    "calamity.book.hover.forfeit": "Voter afin de terminer le match [\/trigger gg]",
-    "calamity.book.hover.joinBlue": "Rejoindre l'\u00e9quipe bleue",
-    "calamity.book.hover.joinRed": "Rejoindre l'\u00e9quipe rouge",
-    "calamity.book.hover.notPlaying": "tu ne jouera pas le prochain match",
-    "calamity.book.hover.readyTeam": "Change le statut de ton \u00e9quipe. Le d\u00e9compte d\u00e9marrera lorsque les deux \u00e9quipes seront pr\u00eates.",
-    "calamity.book.hover.resetSpawnItem": "Choisir un nouvel objet lors de la r\u00e9apparition",
-    "calamity.book.hover.start": "D\u00e9marrer le match apr\u00e8s 15 secondes",
-    "calamity.book.leaveTeam": "Quitter l'\u00e9quipe",
+    "calamity.book.cancelStart": "Annuler",
+    "calamity.book.forfeit": "Déclarer forfait",
+    "calamity.book.hover.cancel": "Annuler le match",
+    "calamity.book.hover.forfeit": "Voter afin de terminer le match [%s]",
+    "calamity.book.hover.joinBlue": "Rejoindre l'équipe bleue",
+    "calamity.book.hover.joinRed": "Rejoindre l'équipe rouge",
+    "calamity.book.hover.leaveTeam": "Quitter ton équipe. Tu peux toujours être brassé à une équipe.",
+    "calamity.book.hover.notPlaying": "Tu ne joueras pas le prochain match",
+    "calamity.book.hover.readyTeam": "Change le statut de ton équipe. Le match démarrera lorsque les deux équipes seront prêtes.",
+    "calamity.book.hover.resetSpawnItem": "Choisir un nouvel objet lors de la réapparition",
+    "calamity.book.hover.shuffle.allPlayers": "Brasse tous les joueurs, sauf les spectateurs",
+    "calamity.book.hover.shuffle.restOfPlayers": "Brasse les joueurs qui ne sont pas dans une équipe",
+    "calamity.book.hover.start": "Démarrer le match après 15 secondes",
+    "calamity.book.leaveTeam": "Quitter l'équipe",
+    "calamity.book.li": "• ",
     "calamity.book.li.li": "  + ",
-    "calamity.book.li": "\u2022 ",
     "calamity.book.matchOptions.title": "Options du match:",
-    "calamity.book.objective.1": "Obtenez des points en r\u00e9cup\u00e9rant des ressources, tuant, ou en fabriquant des objets avec du fer. La premi\u00e8re \u00e9quipe \u00e0 atteindre l'objectif gagne !",
-    "calamity.book.objective.2": "Le score de l'objectif r\u00e9duit lorsque la quantit\u00e9 de fer dans les mines r\u00e9duit.",
+    "calamity.book.objective.1": "Obtenez des points en récupérant des ressources, tuant, ou en fabriquant des objets avec du fer. La première équipe à atteindre l'objectif gagne !",
+    "calamity.book.objective.2": "Le score de l'objectif réduit lorsque la quantité de fer dans les mines réduit.",
     "calamity.book.objective.title": "Objectif:",
-    "calamity.book.readyTeam": "S'afficher pr\u00eat !",
-    "calamity.book.resetSpawnItem": "R\u00e9initialiser l'appartition des objets",
-    "calamity.book.selectArena.title": "S\u00e9lectionner l'ar\u00e8ne: ",
+    "calamity.book.readyTeam": "S'afficher \\\"Prêt\\\"",
+    "calamity.book.resetSpawnItem": "Réinitialiser l'appartition des objets",
+    "calamity.book.selectArena.title": "Sélectionner l'arène: ",
+    "calamity.book.shuffle": "Brasser les joueurs:",
+    "calamity.book.shuffle.all": "tous",
+    "calamity.book.shuffle.rest": "restant",
     "calamity.book.spectate": "Etre spectateur",
-    "calamity.book.start": "D\u00e9marrer",
-    "calamity.book.teams": "\u00c9quipe:",
+    "calamity.book.start": "Démarrer",
+    "calamity.book.teams": "Équipe:",
     "calamity.book.title": "Calamity par Moesh",
-    "calamity.cheated.yourself": "Non seulement tu triches en p\u00e9nalisant le jeu, mais tu te p\u00e9nalises aussi. Tu n'as pas grandi. Tu ne t'es pas am\u00e9lior\u00e9. Tu as pris un raccourci et tu n'as rien gagn\u00e9. Ta victoire est creuse et sans int\u00e9r\u00eat.  Tu n'as rien risqu\u00e9 ni obtenu quoi que ce soit. C'est triste que tu ne vois pas la diff\u00e9rence.",
+    "calamity.book.toggleGamemode": "Mode de jeu",
+    "calamity.book.toggleGamemode.hover": "Change le mode de jeu entre spectateur et aventure",
+    "calamity.cheated.yourself": "Non seulement tu triches en pénalisant le jeu, mais tu te pénalises aussi. Tu n'as pas grandi. Tu ne t'es pas amélioré. Tu as pris un raccourci et tu n'as rien gagné. Ta victoire est creuse et sans intérêt.  Tu n'as rien risqué ni obtenu quoi que ce soit. C'est triste que tu ne vois pas la différence.",
+    "calamity.click.here": "ici",
+    "calamity.enchanted.item": "Objet enchanté",
     "calamity.feature.notAvailable": "Non disponible",
-    "calamity.forfeit.draw": "\u00c9galit\u00e9!",
-    "calamity.forfeit.retracted.stopped": "%s a retir\u00e9 son vote pour d\u00e9clarer forfait. Fin du vote.",
-    "calamity.forfeit.retracted": "%s a retir\u00e9 son vote pour d\u00e9clarer forfait. %s sur %s joueurs de l'\u00e9quipe ont vot\u00e9 afin de d\u00e9clarer forfait.",
-    "calamity.forfeit.started": "%s a vot\u00e9 afin de d\u00e9clarer forfait. %s sur %s joueurs ont d\u00e9clar\u00e9 forfait. Utilise [%s] afin de voter.",
-    "calamity.forfeit": "L'\u00e9quipe %s %s a d\u00e9clar\u00e9 forfait!",
-    "calamity.generator.output.attackedEffect": "Application de l'effet [%s%3$s] pendant %s seconds",
-    "calamity.generator.output.attackEffect": "Envoie de l'effet [%s%3$s] \u00e0 l'ennemi pendant %s seconds",
+    "calamity.forfeit": "L'équipe %s %s a déclaré forfait!",
+    "calamity.forfeit.draw": "Égalité !",
+    "calamity.forfeit.retracted": "%s a retiré son vote pour déclarer forfait. %s sur %s joueurs de l'équipe ont voté afin de déclarer forfait.",
+    "calamity.forfeit.retracted.stopped": "%s a retiré son vote pour déclarer forfait. Fin du vote.",
+    "calamity.forfeit.started": "%s a voté afin de déclarer forfait. %s sur %s joueurs ont déclaré forfait. Utilise [%s] afin de voter.",
+    "calamity.generator.enchantedItem.alreadyEnchanted": "L'objet a déjà cet enchantement.",
+    "calamity.generator.enchantedItem.announced": "Un %s a été créé par %s %s !",
+    "calamity.generator.enchantedItem.announced.invalid": "%s %s a essayé d'enchanter un objet mais n'a pas réussi !",
+    "calamity.generator.enchantedItem.invalid": "Aucun objet valide trouvé dans la main principale. Prends ce %s.",
+    "calamity.generator.enchantedItem.valid": "Objet valide trouvé ! %s a été donné.",
+    "calamity.generator.output.attackEffect": "Envoie de l'effet [%s%3$s] à l'ennemi pendant %s secondes",
+    "calamity.generator.output.attackedEffect": "Application de l'effet [%s%3$s] pendant %s secondes",
+    "calamity.generator.output.effect": "Application de l'effet [%s%3$s] pendant %s secondes",
     "calamity.generator.output.effect.level2": " II",
-    "calamity.generator.output.effect": "Application de l'effet [%s%3$s] pendant %s seconds",
     "calamity.generator.output.item": "Don de [%s] * %s",
-    "calamity.generator.sign.activated": "Activ\u00e9 !",
+    "calamity.generator.sign.activated": "Activé !",
     "calamity.generator.sign.attack": "%s sec. attaque",
     "calamity.generator.sign.enchant": "Pour la main principale",
     "calamity.generator.sign.perPlayer": "%s par joueur",
-    "calamity.generator.sign.perTeam": "%s sec. pour l'\u00e9quipe",
+    "calamity.generator.sign.perTeam": "%s sec. pour l'équipe",
     "calamity.generator.sign.progress": "Chargement: %s%%",
-    "calamity.generator.sign.ready": "Pr\u00eat",
-    "calamity.generator.sign.resetting": "R\u00e9initialisation: %s%%",
+    "calamity.generator.sign.ready": "Prêt",
+    "calamity.generator.sign.resetting": "Réinitialisation: %s%%",
     "calamity.generator.sign.type": "[%s%s]",
     "calamity.generator.statusMessage.chargeSecond": "Chargement: %s seconde restante",
     "calamity.generator.statusMessage.chargeSeconds": "Chargement: %s secondes restantes",
-    "calamity.generator.statusMessage.resettingSecond": "R\u00e9initialisation: %s seconde restante",
-    "calamity.generator.statusMessage.resettingSeconds": "R\u00e9initialisation: %s secondes restantes",
+    "calamity.generator.statusMessage.resettingSecond": "Réinitialisation: %s seconde restante",
+    "calamity.generator.statusMessage.resettingSeconds": "Réinitialisation: %s secondes restantes",
+    "calamity.goal": "Ligne d'arrivé",
+    "calamity.hover.discord.DinnerPartyGames": "Rejoins le discord \\\"Dinner Party Games\\\"",
+    "calamity.hover.moesh.github": "Ouvre github.com/Moesh",
+    "calamity.hover.moesh.twitter": "Ouvre witter.com/HeartlessMoesh",
     "calamity.hover.sendTriggerCommand": "Clique ici afin d'envoyer la commande dans le chat",
     "calamity.hover.viewGitHub": "Clique ici afin de visiter le GitHub repo",
-    "calamity.joined.team": "%s a rejoins l'\u00e9quipe %s",
-    "calamity.left.team": "%s a abandonn\u00e9 tout espoir",
-    "calamity.match.cancelled.byPlayer": "%s \u23f9 a annul\u00e9 le match",
-    "calamity.match.cancelled.noPlayers": "Au minimum 1 joueur doit \u00eatre dans chaque \u00e9quipe afin de d\u00e9marrer le match",
-    "calamity.match.cancelled": "Match \u23f9 annul\u00e9",
-    "calamity.match.started.byPlayer": "L'\u00e9quipe %s %s a d\u00e9marr\u00e9 un match",
-    "calamity.match.stats": "%1$s contre %2$s. %3$s %4$s a gagn\u00e9 de %5$s points !",
+    "calamity.joined.team": "%s a rejoins l'équipe %s",
+    "calamity.left.team": "%s a quitté l'équipe %s",
+    "calamity.match.cancelled": "Match %s annulé",
+    "calamity.match.cancelled.byPlayer": "%s %s a annulé le match",
+    "calamity.match.cancelled.noPlayers": "Au minimum 1 joueur doit être dans chaque équipe afin de démarrer le match",
+    "calamity.match.started.byPlayer": "L'équipe %s %s a démarré un match",
+    "calamity.match.stats": "%1$s contre %2$s. L'équipe %3$s %4$s a gagné de %5$s points en %6$s !",
     "calamity.notReady": "En attente",
     "calamity.out.of.bounds": "En dehors de la zone !",
-    "calamity.player.sidelined": "%s a \u00e9t\u00e9 boug\u00e9 dans les gradins. Rien n'affecte le jeu. Que le match continue !",
-    "calamity.points": "%s: +%s points",
-    "calamity.prestige.blueForfeit.blue": "Vous avez gard\u00e9 votre dignit\u00e9",
+    "calamity.player.sessionID.mismatch": "Id de session incorrect. Vous allez être ajouté en tant que nouveau joueur.",
+    "calamity.player.sidelined": "%s a été bougé dans les gradins. Rien n'affecte le jeu. Que le match continue !",
+    "calamity.points": "+%s points",
+    "calamity.prestige.blueForfeit.blue": "Vous avez gardé votre dignité",
     "calamity.prestige.blueForfeit.red": "Les bleues savaient qu'ils ne fallait pas rigoler avec vous !",
     "calamity.prestige.lost": "Perdu de %s points",
-    "calamity.prestige.redForfeit.blue": "Les rouges ont gracieusement abandonn\u00e9",
-    "calamity.prestige.redForfeit.red": "La vie est parfois dure, mais le combat n'est jamais fini",
-    "calamity.prestige.won": "Gagn\u00e9 de %s points",
-    "calamity.ready": "Pr\u00eat",
+    "calamity.prestige.redForfeit.blue": "Les rouges ont gracieusement abandonné",
+    "calamity.prestige.redForfeit.red": "Votre bonté vous sera bénéfique",
+    "calamity.prestige.won": "Gagné de %s points",
+    "calamity.ready": "Prêt",
     "calamity.reset.map": "Utilise [%s] afin de rejouer.",
-    "calamity.resetItems.alreadyChosen": "Tu as d\u00e9j\u00e0 choisi de r\u00e9initialiser tes objets la prochaine fois que tu r\u00e9apparais.",
-    "calamity.resetItems.haventChosen": "Tu n'as pas encore s\u00e9lectionn\u00e9 d'objet. Rien \u00e0 r\u00e9initialiser.",
-    "calamity.resetItems": "Tu seras autoris\u00e9 \u00e0 choisir un nouvel objet par d\u00e9faut lors de ta prochaine r\u00e9apparition.",
-    "calamity.resetting": "R\u00e9initialisation aux param\u00e8tres par d\u00e9faut",
-    "calamity.seekGlory": "Rejoins la gloire ou tombe dans la calamit\u00e9 !",
+    "calamity.resetItems": "Tu seras autorisé à choisir un nouvel objet par défaut lors de ta prochaine réapparition.",
+    "calamity.resetItems.alreadyChosen": "Tu as déjà choisi de réinitialiser tes objets la prochaine fois que tu réapparais.",
+    "calamity.resetItems.haventChosen": "Tu n'as pas encore sélectionné d'objet. Rien à réinitialiser.",
+    "calamity.resetting": "Réinitialisation aux paramètres par défaut",
+    "calamity.seekGlory": "Rejoins la gloire ou tombe dans la calamité !",
+    "calamity.select.respawnItem": "Choisi ton objet lorsque tu réapparais en utilisant l'un de ces outils.",
+    "calamity.shuffle.error.noAvailablePlayers": "Aucun joueur n'est disponible pour le brassage.",
+    "calamity.shuffle.newTeam": "%s: %s",
+    "calamity.shuffle.newTeamAdditions": "Brassé dans l'équipe %s: %s",
+    "calamity.shuffle.playerShuffled.all": "%s a brassé tous les joueurs",
+    "calamity.shuffle.playerShuffled.rest": "%s a brassé les joueurs qui n'étaient pas dans une équipe",
     "calamity.sidelines": "%s a rejoins les gradins",
+    "calamity.startMatch.countdown": "Match ▶ Début dans %s secondes",
     "calamity.startMatch.countdown.lastFiveSeconds": "%s...",
-    "calamity.startMatch.countdown": "Match \u25b6 D\u00e9but dans %s secondes",
+    "calamity.subtitle.announcer": "L'annonceur parle",
     "calamity.subtitle.eye.release": "Oeil ouvert",
-    "calamity.subtitle.eye.squish": "Oeil \u00e9cras\u00e9",
-    "calamity.team.notReady.blue": "L'\u00e9quipe %s %s a besoin d'un moment %s",
-    "calamity.team.notReady.red": "L'\u00e9quipe %s %s a dit \\\"attendez !\\\" %s",
-    "calamity.team.ready": "L'\u00e9quipe %s %s est pr\u00eate %s",
-    "calamity.troll": "%s est tomb\u00e9 dans le trou ! Que c'est embarrassent !",
+    "calamity.subtitle.eye.squish": "Oeil écrasé",
+    "calamity.team.notReady.blue": "L'équipe %s %s a besoin d'un moment %s",
+    "calamity.team.notReady.red": "L'équipe %s %s a dit \\\"attendez !\\\" %s",
+    "calamity.team.ready": "L'équipe %s %s est prête %s",
+    "calamity.troll": "%s est tombé dans le trou ! Que c'est embarrassant !",
+    "calamity.welcome": "Bienvenue dans Calamity: Édition définitive ! Crée par Moesh.",
     "calamity.welcome.objective": "Objectif: Collecte assez de points afin d'atteindre le score. Clique %s afin de voir le \\\"Lis-moi\\\" en ligne ! (version anglaise seulement)",
-    "calamity.welcome": "Bienvenue dans Calamity: \u00c9dition d\u00e9finitive ! Cr\u00e9e par Moesh.",
-    "commands.trigger.failed.unprimed": "Tu n'es pas autoris\u00e9 \u00e0 utiliser cette commande maintenant",
-    "death.attack.outOfWorld": "%1$s est tomb\u00e9 dans la calamit\u00e9",
+    "commands.trigger.failed.unprimed": "Tu n'es pas autorisé à utiliser cette commande maintenant",
+    "death.attack.outOfWorld": "%1$s est tombé dans la calamité",
+    "map.author": "Moesh",
     "map.author.hover.link": "Clique pour voir le lien",
     "map.author.name": "Moesh",
-    "map.author": "Moesh",
     "map.name": "Calamity",
     "spacer.brackets.left": " (%s)",
+    "spacer.colon": "%s: %s",
     "spacer.left": " %s",
     "spacer.middle": "%s %s",
     "spacer.or": "%s ou %s",
     "spacer.right": "%s ",
     "system.message": ">>> %s",
-    "team.blue": "Bleu",
+    "team.blue": "Bleue",
     "team.red": "Rouge",
-    "team.spectator": "Spectateur"
+    "team.spectator": "Spectateur",
+    "translator.name": "Moesh"
 }
