--- a/resourcepacks/calamity/assets/calamity/lang/sv_se.json
+++ b/resourcepacks/calamity/assets/calamity/lang/sv_se.json
@@ -8,89 +8,89 @@
     "calamity.book.cancelStart": "avbryt",
     "calamity.book.forfeit": "Ge upp",
     "calamity.book.hover.cancel": "Avbryt match",
-    "calamity.book.hover.forfeit": "R\u00f6sta f\u00f6r att avsluta matchen [\/trigger gg]",
-    "calamity.book.hover.joinBlue": "G\u00e5 med i Bl\u00e5tt lag",
-    "calamity.book.hover.joinRed": "G\u00e5 med i R\u00f6tt lag",
-    "calamity.book.hover.notPlaying": "Du kommer inte att spela n\u00e4sta match",
-    "calamity.book.hover.readyTeam": "\u00c4ndra ditt lags redo-l\u00e4ge. Nedr\u00e4kningen f\u00f6r matchen p\u00e5b\u00f6rjas n\u00e4r b\u00e4gge lagen \u00e4r redo.",
-    "calamity.book.hover.resetSpawnItem": "V\u00e4lj ett nytt respawn-f\u00f6rem\u00e5l n\u00e4r du respawnar",
+    "calamity.book.hover.forfeit": "Rösta för att avsluta matchen [/trigger gg]",
+    "calamity.book.hover.joinBlue": "Gå med i Blått lag",
+    "calamity.book.hover.joinRed": "Gå med i Rött lag",
+    "calamity.book.hover.notPlaying": "Du kommer inte att spela nästa match",
+    "calamity.book.hover.readyTeam": "Ändra ditt lags redo-läge. Nedräkningen för matchen påbörjas när bägge lagen är redo.",
+    "calamity.book.hover.resetSpawnItem": "Välj ett nytt respawn-föremål när du respawnar",
     "calamity.book.hover.start": "Starta match efter 15 sekunder",
-    "calamity.book.leaveTeam": "L\u00e4mna lag",
-    "calamity.book.matchOptions.title": "Matchinst\u00e4llningar",
-    "calamity.book.objective.1": "Erh\u00e5ll po\u00e4ng genom att samla resurser, d\u00f6da, eller skapa f\u00f6rem\u00e5l med j\u00e4rntackor. Det lag som f\u00f6rst n\u00e5r m\u00e5let vinner!",
-    "calamity.book.objective.2": "M\u00e5let s\u00e4nks n\u00e4r en j\u00e4rntacka avl\u00e4gsnas fr\u00e5n gruvorna i mitten.",
-    "calamity.book.objective.title": "M\u00e5l:",
-    "calamity.book.readyTeam": "\u00c4ndra redo-l\u00e4ge",
-    "calamity.book.resetSpawnItem": "\u00c5terst\u00e4ll spawn-f\u00f6rem\u00e5l",
-    "calamity.book.selectArena.title": "V\u00e4lj arena",
+    "calamity.book.leaveTeam": "Lämna lag",
+    "calamity.book.matchOptions.title": "Matchinställningar",
+    "calamity.book.objective.1": "Erhåll poäng genom att samla resurser, döda, eller skapa föremål med järntackor. Det lag som först når målet vinner!",
+    "calamity.book.objective.2": "Målet sänks när en järntacka avlägsnas från gruvorna i mitten.",
+    "calamity.book.objective.title": "Mål:",
+    "calamity.book.readyTeam": "Ändra redo-läge",
+    "calamity.book.resetSpawnItem": "Återställ spawn-föremål",
+    "calamity.book.selectArena.title": "Välj arena",
     "calamity.book.spectate": "Titta",
     "calamity.book.start": "Starta",
     "calamity.book.teams": "Lag",
     "calamity.book.title": "Calamity av Moesh",
-    "calamity.cheated.yourself": "Du har inte bara lurat spelet, du har lurat dig sj\u00e4lv. Du utvecklades inte och du blev inte b\u00e4ttre. Du tog den enkla v\u00e4gen och l\u00e4rde dig inget. En betydelsel\u00f6s seger utan risker och nya erfarenheter. Det \u00e4r sorgligt att du inte f\u00f6rst\u00e5r skillnaden.",
-    "calamity.feature.notAvailable": "Inte tillg\u00e4ngligt",
-    "calamity.forfeit.draw": "Det blev oavgjort!",
-    "calamity.forfeit.retracted.stopped": "%s har dragit tillbaka sin r\u00f6st. R\u00f6stningen har stoppats.",
-    "calamity.forfeit.retracted": "%s har dragit tillbaka sin r\u00f6st. %s av de %s r\u00f6ster som beh\u00f6vs p\u00e5 laget har r\u00f6stat f\u00f6r att ge upp matchen.",
-    "calamity.forfeit.started": "%s har r\u00f6stat f\u00f6r att ge upp matchen. %s av de %s r\u00f6ster som beh\u00f6vs har r\u00f6stat f\u00f6r att ge upp. Anv\u00e4nd [%s] f\u00f6r att r\u00f6sta.",
+    "calamity.cheated.yourself": "Du har inte bara lurat spelet, du har lurat dig själv. Du utvecklades inte och du blev inte bättre. Du tog den enkla vägen och lärde dig inget. En betydelselös seger utan risker och nya erfarenheter. Det är sorgligt att du inte förstår skillnaden.",
+    "calamity.feature.notAvailable": "Inte tillgängligt",
     "calamity.forfeit": "%s %s har gett upp!",
-    "calamity.generator.output.attackEffect": "Skickade motst\u00e5ndare [%s%3$s] i %s sekunder",
+    "calamity.forfeit.draw": "Det blev oavgjort!",
+    "calamity.forfeit.retracted": "%s har dragit tillbaka sin röst. %s av de %s röster som behövs på laget har röstat för att ge upp matchen.",
+    "calamity.forfeit.retracted.stopped": "%s har dragit tillbaka sin röst. Röstningen har stoppats.",
+    "calamity.forfeit.started": "%s har röstat för att ge upp matchen. %s av de %s röster som behövs har röstat för att ge upp. Använd [%s] för att rösta.",
+    "calamity.generator.output.attackEffect": "Skickade motståndare [%s%3$s] i %s sekunder",
     "calamity.generator.sign.activated": "Aktiverat!",
-    "calamity.generator.sign.enchant": "F\u00f6r huvudgrepp",
+    "calamity.generator.sign.enchant": "För huvudgrepp",
     "calamity.generator.sign.perPlayer": "%s per spelare",
     "calamity.generator.sign.perTeam": "%s sec. till laget",
     "calamity.generator.sign.progress": "Laddar: %s%%",
     "calamity.generator.sign.ready": "Redo",
-    "calamity.generator.sign.resetting": "\u00c5terst\u00e4ller: %s%%",
+    "calamity.generator.sign.resetting": "Återställer: %s%%",
     "calamity.generator.sign.type": "[%s%s]",
     "calamity.generator.statusMessage.chargeSecond": "Laddar: %s sekund kvar",
     "calamity.generator.statusMessage.chargeSeconds": "Laddar: %s sekunder kvar",
-    "calamity.generator.statusMessage.resettingSecond": "\u00c5terst\u00e4ller: %s sekund kvar",
-    "calamity.generator.statusMessage.resettingSeconds": "\u00c5terst\u00e4ller: %s sekunder kvar",
-    "calamity.hover.sendTriggerCommand": "Tryck h\u00e4r f\u00f6r att skicka kommandot till din textbox",
-    "calamity.hover.viewGitHub": "Tryck h\u00e4r f\u00f6r att se GitHub-repon",
-    "calamity.joined.team": "%s ansl\u00f6t till %s",
+    "calamity.generator.statusMessage.resettingSecond": "Återställer: %s sekund kvar",
+    "calamity.generator.statusMessage.resettingSeconds": "Återställer: %s sekunder kvar",
+    "calamity.hover.sendTriggerCommand": "Tryck här för att skicka kommandot till din textbox",
+    "calamity.hover.viewGitHub": "Tryck här för att se GitHub-repon",
+    "calamity.joined.team": "%s anslöt till %s",
     "calamity.left.team": "%s gav upp allt hopp",
-    "calamity.match.cancelled.byPlayer": "%s %s avbr\u00f6t en match",
-    "calamity.match.cancelled.noPlayers": "Minst en spelare m\u00e5ste vara i laget f\u00f6r att starta en match",
-    "calamity.match.cancelled": "Matchen %s avbr\u00f6ts",
+    "calamity.match.cancelled": "Matchen %s avbröts",
+    "calamity.match.cancelled.byPlayer": "%s %s avbröt en match",
+    "calamity.match.cancelled.noPlayers": "Minst en spelare måste vara i laget för att starta en match",
     "calamity.match.started.byPlayer": "%s %s startade en match",
-    "calamity.match.stats": "%1$s till %2$s. %3$s %4$s vann med %5$s po\u00e4ng!",
+    "calamity.match.stats": "%1$s till %2$s. %3$s %4$s vann med %5$s poäng!",
     "calamity.notReady": "Inte redo",
-    "calamity.out.of.bounds": "Utanf\u00f6r banan!",
-    "calamity.player.sidelined": "%s har f\u00f6rpassats till sidlinjen. Inget har f\u00f6r\u00e4ndrats. Matchen forts\u00e4tter!",
-    "calamity.points": "%s: +%s po\u00e4ng",
-    "calamity.prestige.blueForfeit.blue": "Du har kvar din v\u00e4rdighet",
-    "calamity.prestige.blueForfeit.red": "Bl\u00e5tt lag f\u00f6rstod att man inte muckar med dig!",
-    "calamity.prestige.lost": "F\u00f6rlorade med %s po\u00e4ng",
-    "calamity.prestige.redForfeit.blue": "R\u00f6tt lag gav beundransv\u00e4rt upp",
-    "calamity.prestige.redForfeit.red": "Du kommer f\u00e5 en ny chans",
-    "calamity.prestige.won": "Vann med %s po\u00e4ng",
+    "calamity.out.of.bounds": "Utanför banan!",
+    "calamity.player.sidelined": "%s har förpassats till sidlinjen. Inget har förändrats. Matchen fortsätter!",
+    "calamity.points": "%s: +%s poäng",
+    "calamity.prestige.blueForfeit.blue": "Du har kvar din värdighet",
+    "calamity.prestige.blueForfeit.red": "Blått lag förstod att man inte muckar med dig!",
+    "calamity.prestige.lost": "Förlorade med %s poäng",
+    "calamity.prestige.redForfeit.blue": "Rött lag gav beundransvärt upp",
+    "calamity.prestige.redForfeit.red": "Du kommer få en ny chans",
+    "calamity.prestige.won": "Vann med %s poäng",
     "calamity.ready": "Redo",
-    "calamity.reset.map": "Anv\u00e4nd [%s] f\u00f6r att spela igen.",
-    "calamity.resetItems.alreadyChosen": "Du har redan valt att \u00e5terst\u00e4lla ditt f\u00f6rem\u00e5l inf\u00f6r n\u00e4sta respawn.",
-    "calamity.resetItems.haventChosen": "Inget att \u00e5terst\u00e4lla. Du har \u00e4nnu inte valt n\u00e5got f\u00f6rem\u00e5l.",
-    "calamity.resetItems": "Du f\u00e5r kommer att f\u00e5 v\u00e4lja ett nytt f\u00f6rem\u00e5l vid n\u00e4sta respawn-tillf\u00e4lle.",
-    "calamity.resetting": "\u00c5terst\u00e4ller till standardl\u00e4ge",
-    "calamity.sidelines": "%s f\u00f6rflyttades till sidlinjen",
+    "calamity.reset.map": "Använd [%s] för att spela igen.",
+    "calamity.resetItems": "Du får kommer att få välja ett nytt föremål vid nästa respawn-tillfälle.",
+    "calamity.resetItems.alreadyChosen": "Du har redan valt att återställa ditt föremål inför nästa respawn.",
+    "calamity.resetItems.haventChosen": "Inget att återställa. Du har ännu inte valt något föremål.",
+    "calamity.resetting": "Återställer till standardläge",
+    "calamity.sidelines": "%s förflyttades till sidlinjen",
+    "calamity.startMatch.countdown": "Matchen ▶ börjar om %s sekunder",
     "calamity.startMatch.countdown.lastFiveSeconds": "%s...",
-    "calamity.startMatch.countdown": "Matchen \u25b6 b\u00f6rjar om %s sekunder",
-    "calamity.subtitle.eye.release": "\u00d6ga \u00f6ppnat",
-    "calamity.subtitle.eye.squish": "\u00d6ga kl\u00e4mt",
-    "calamity.team.notReady.blue": "%s %s beh\u00f6ver ett \u00f6gonblick %s",
-    "calamity.team.notReady.red": "%s %s ber dig att v\u00e4nta %s",
-    "calamity.team.ready": "%s %s \u00e4r redo %s",
-    "calamity.troll": "%s f\u00f6ll ner i trollh\u00e5let! Usch s\u00e5 pinsamt!",
-    "calamity.welcome.objective": "Uppdrag: Samla tillr\u00e4ckligt med po\u00e4ng f\u00f6r att n\u00e5 m\u00e5let. Klicka p\u00e5 %s f\u00f6r att l\u00e4sa online-guiden!",
-    "calamity.welcome": "V\u00e4lkommen till Calamity: Definitive Edition! Skapad av Moesh.",
-    "commands.trigger.failed.unprimed": "Du kan inte anv\u00e4nda detta kommando just nu",
+    "calamity.subtitle.eye.release": "Öga öppnat",
+    "calamity.subtitle.eye.squish": "Öga klämt",
+    "calamity.team.notReady.blue": "%s %s behöver ett ögonblick %s",
+    "calamity.team.notReady.red": "%s %s ber dig att vänta %s",
+    "calamity.team.ready": "%s %s är redo %s",
+    "calamity.troll": "%s föll ner i trollhålet! Usch så pinsamt!",
+    "calamity.welcome": "Välkommen till Calamity: Definitive Edition! Skapad av Moesh.",
+    "calamity.welcome.objective": "Uppdrag: Samla tillräckligt med poäng för att nå målet. Klicka på %s för att läsa online-guiden!",
+    "commands.trigger.failed.unprimed": "Du kan inte använda detta kommando just nu",
     "death.attack.outOfWorld": "%1$s liv slutade i katastrof",
-    "map.author.hover.link": "Klicka f\u00f6r att se l\u00e4nken",
-    "map.author.name": "Moesh",
     "map.author": "Moesh",
+    "map.author.hover.link": "Klicka för att se länken",
+    "map.author.name": "Moesh",
     "map.name": "Calamity",
     "spacer.or": "%s eller %s",
-    "team.blue": "Bl\u00e5",
-    "team.red": "R\u00f6d",
-    "team.spectator": "\u00c5sk\u00e5dare"
+    "team.blue": "Blå",
+    "team.red": "Röd",
+    "team.spectator": "Åskådare"
 }
