--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -1,142 +1,142 @@
 {
-	"arena.calamity.author": "Moesh",
-	"arena.calamity.icon": "z",
-	"arena.calamity.name": "Calamity",
-	"arena.shattering.author": "Moesh",
-	"arena.shattering.icon": "x",
-	"arena.shattering.name": "Shattering",
-	"book.pageIndicator": "\u00a7ov5.0.0",
-	"by.author": "by %s",
-	"calamity.arena.error.sameArena": "This arena is already selected",
-	"calamity.arena.error.cooldown": "Arena selection is on cooldown",
-	"calamity.book.cancelStart": "Cancel",
-	"calamity.book.forfeit": "Forfeit",
-	"calamity.book.hover.cancel": "Cancel match start",
-	"calamity.book.hover.forfeit": "Vote to end the match [%s]",
-	"calamity.book.hover.joinBlue": "Join the Blue team",
-	"calamity.book.hover.joinRed": "Join the Red team",
-	"calamity.book.hover.leaveTeam": "Leave your team. You can still be shuffled onto a team.",
-	"calamity.book.hover.notPlaying": "You will not play the next match",
-	"calamity.book.hover.readyTeam": "Toggle your team ready. When both teams are ready, match will start.",
-	"calamity.book.hover.resetSpawnItem": "Choose a new respawn item when you respawn",
-	"calamity.book.hover.shuffle.allPlayers": "Shuffle all players, except spectators",
-	"calamity.book.hover.shuffle.restOfPlayers": "Shuffle players who are not on a team",
-	"calamity.book.hover.start": "Start match after 15 seconds",
-	"calamity.book.leaveTeam": "Leave team",
-	"calamity.book.li.li": "  + ",
-	"calamity.book.li": "\u2022 ",
-	"calamity.book.matchOptions.title": "Match options:",
-	"calamity.book.objective.1": "Gain points by capturing resources, killing, or crafting items with iron ingots. First team to reach the score goal wins!",
-	"calamity.book.objective.2": "The score goal is lowered when iron ore is removed from the central mines.",
-	"calamity.book.objective.title": "Objective:",
-	"calamity.book.readyTeam": "Ready team",
-	"calamity.book.resetSpawnItem": "Reset spawn item",
-	"calamity.book.selectArena.title": "Select arena: ",
-	"calamity.book.shuffle.all": "all",
-	"calamity.book.shuffle.rest": "rest",
-	"calamity.book.shuffle": "Shuffle players:",
-	"calamity.book.spectate": "Spectate",
-	"calamity.book.start": "Start",
-	"calamity.book.teams": "Team:",
-	"calamity.book.title": "Calamity by Moesh",
-	"calamity.book.toggleGamemode.hover": "Toggle game mode between spectator and adventure",
-	"calamity.book.toggleGamemode": "Game mode",
-	"calamity.cheated.yourself": "You cheated not only the game, but yourself. You didn't grow. You didn't improve. You took a shortcut and gained nothing. You experienced a hollow victory. Nothing was risked and nothing was gained. It's sad that you don't know the difference.",
-	"calamity.click.here": "here",
-	"calamity.enchanted.item": "Enchanted Item",
-	"calamity.feature.notAvailable": "Not available",
-	"calamity.forfeit.draw": "It's a draw!",
-	"calamity.forfeit.retracted.stopped": "%s has retracted their forfeit vote. Voting stopped.",
-	"calamity.forfeit.retracted": "%s has retracted their forfeit vote. %s out of the needed %s players on the team have voted to forfeit the game.",
-	"calamity.forfeit.started": "%s has voted to forfeit the game. %s out of the needed %s players have voted to forfeit. Use [%s] to vote.",
-	"calamity.forfeit": "%s %s has forfeited!",
-	"calamity.generator.enchantedItem.alreadyEnchanted": "Item already has this enchantment.",
-	"calamity.generator.enchantedItem.announced.invalid": "%s %s attempted to enchant an item and failed!",
-	"calamity.generator.enchantedItem.announced": "An %s was created by %s %s!",
-	"calamity.generator.enchantedItem.invalid": "No valid item found in main hand.",
-	"calamity.generator.enchantedItem.valid": "Valid item found! %s given.",
-	"calamity.generator.output.attackedEffect": "Given [%s%3$s] for %s seconds",
-	"calamity.generator.output.attackEffect": "Sent enemy [%s%3$s] for %s seconds",
-	"calamity.generator.output.effect.level2": " II",
-	"calamity.generator.output.effect": "Given [%s%3$s] for %s seconds",
-	"calamity.generator.output.item": "Given [%s] * %s",
-	"calamity.generator.sign.activated": "Activated!",
-	"calamity.generator.sign.attack": "%s sec. attack",
-	"calamity.generator.sign.enchant": "For main hand",
-	"calamity.generator.sign.perPlayer": "%s per player",
-	"calamity.generator.sign.perTeam": "%s sec. for team",
-	"calamity.generator.sign.progress": "Charging: %s%%",
-	"calamity.generator.sign.ready": "Ready",
-	"calamity.generator.sign.resetting": "Resetting: %s%%",
-	"calamity.generator.sign.type": "[%s%s]",
-	"calamity.generator.statusMessage.chargeSecond": "Charging: %s second left",
-	"calamity.generator.statusMessage.chargeSeconds": "Charging: %s seconds left",
-	"calamity.generator.statusMessage.resettingSecond": "Resetting: %s second left",
-	"calamity.generator.statusMessage.resettingSeconds": "Resetting: %s seconds left",
-	"calamity.goal": "Finish line",
-	"calamity.hover.discord.DinnerPartyGames": "Join Dinner Party Games on Discord",
-	"calamity.hover.moesh.github": "Open github.com\/Moesh",
-	"calamity.hover.moesh.twitter": "Open twitter.com\/HeartlessMoesh",
-	"calamity.hover.sendTriggerCommand": "Click here to send the command to your text box",
-	"calamity.hover.viewGitHub": "Click to view the GitHub repo",
-	"calamity.joined.team": "%s joined %s",
-	"calamity.left.team": "%s left team %s",
-	"calamity.match.cancelled.byPlayer": "%s %s cancelled a match",
-	"calamity.match.cancelled.noPlayers": "At least one player must be on a team to start a match",
-	"calamity.match.cancelled": "Match %s cancelled",
-	"calamity.match.started.byPlayer": "%s %s started a match",
-	"calamity.match.stats": "%1$s to %2$s. %3$s %4$s won by %5$s points in %6$s!",
-	"calamity.notReady": "Not ready",
-	"calamity.out.of.bounds": "Out of bounds!",
-	"calamity.player.sessionID.mismatch": "SessionID mismatch. You will be processed as a new player.",
-	"calamity.player.sidelined": "%s has been moved to the sidelines. Nothing has been affected. The match continues!",
-	"calamity.points": "+%s points",
-	"calamity.prestige.blueForfeit.blue": "You've kept your dignity",
-	"calamity.prestige.blueForfeit.red": "Blue knew not to mess with you!",
-	"calamity.prestige.lost": "Lost by %s points",
-	"calamity.prestige.redForfeit.blue": "Red gracefully gave up",
-	"calamity.prestige.redForfeit.red": "You'll live to fight again",
-	"calamity.prestige.won": "Won by %s points",
-	"calamity.ready": "Ready",
-	"calamity.reset.map": "Use [%s] to play again.",
-	"calamity.resetItems.alreadyChosen": "You have already chosen to reset your item next time you respawn.",
-	"calamity.resetItems.haventChosen": "You haven't selected an item yet. Nothing to reset.",
-	"calamity.resetItems": "You will get to select a new item the next time you respawn.",
-	"calamity.resetting": "Resetting to default state",
-	"calamity.seekGlory": "Seek glory or fall to calamity!",
-	"calamity.select.respawnItem": "Select your respawn item by using one of these tools.",
-	"calamity.shuffle.error.noAvailablePlayers": "No players are available to be shuffled.",
-	"calamity.shuffle.newTeam": "%s: %s",
-	"calamity.shuffle.newTeamAdditions": "Shuffled to %s: %s",
-	"calamity.shuffle.playerShuffled.all": "%s shuffled all players",
-	"calamity.shuffle.playerShuffled.rest": "%s shuffled players who were not on a team",
-	"calamity.sidelines": "%s moved to the sidelines",
-	"calamity.startMatch.countdown.lastFiveSeconds": "%s...",
-	"calamity.startMatch.countdown": "Match \u25b6 begins in %s seconds",
-	"calamity.subtitle.announcer": "Announcer speaks",
-	"calamity.subtitle.eye.release": "Eye opened",
-	"calamity.subtitle.eye.squish": "Eye squished",
-	"calamity.team.notReady.blue": "%s %s needs a moment %s",
-	"calamity.team.notReady.red": "%s %s says hol' up %s",
-	"calamity.team.ready": "%s %s is ready %s",
-	"calamity.troll": "%s fell in the troll hole! How embarrassing!",
-	"calamity.welcome.objective": "Objective: Collect enough points to reach the score goal. Click %s to view the online readme!",
-	"calamity.welcome": "Welcome to Calamity: Definitive Edition! Created by Moesh.",
-	"commands.trigger.failed.unprimed": "You're not able to use this command right now",
-	"death.attack.outOfWorld": "%1$s fell to calamity",
-	"map.author.hover.link": "Click to view link",
-	"map.author.name": "Moesh",
-	"map.author": "Moesh",
-	"map.name": "Calamity",
-	"spacer.brackets.left": " (%s)",
-	"spacer.colon": "%s: %s",
-	"spacer.left": " %s",
-	"spacer.middle": "%s %s",
-	"spacer.or": "%s or %s",
-	"spacer.right": "%s ",
-	"system.message": ">>> %s",
-	"team.blue": "Blue",
-	"team.red": "Red",
-	"team.spectator": "Spectator",
-	"translator.name": "Moesh"
+    "death.attack.outOfWorld": "%1$s fell to calamity",
+    "commands.trigger.failed.unprimed": "You're not able to use this command right now",
+    "map.name": "Calamity",
+    "by.author": "by %s",
+    "map.author": "Moesh",
+    "map.author.hover.link": "Click to view link",
+    "arena.calamity.name": "Calamity",
+    "arena.calamity.author": "Moesh",
+    "arena.shattering.name": "Shattering",
+    "arena.shattering.author": "Moesh",
+    "spacer.brackets.left": " (%s)",
+    "spacer.left": " %s",
+    "spacer.right": "%s ",
+    "spacer.middle": "%s %s",
+    "system.message": ">>> %s",
+    "team.blue": "Blue",
+    "team.red": "Red",
+    "team.spectator": "Spectator",
+    "calamity.book.cancelStart": "Cancel",
+    "calamity.book.hover.cancel": "Cancel match start",
+    "calamity.book.hover.joinBlue": "Join the Blue team",
+    "calamity.book.hover.joinRed": "Join the Red team",
+    "calamity.book.hover.notPlaying": "You will not play the next match",
+    "calamity.book.hover.start": "Start match after 15 seconds",
+    "calamity.book.leaveTeam": "Leave team",
+    "calamity.book.li.li": "  + ",
+    "calamity.book.li": "• ",
+    "calamity.book.objective.1": "Gain points by capturing resources, killing, or crafting items with iron ingots. First team to reach the score goal wins!",
+    "calamity.book.objective.2": "The score goal is lowered when iron ore is removed from the central mines.",
+    "calamity.book.objective.title": "Objective:",
+    "calamity.book.selectArena.title": "Select arena: ",
+    "calamity.book.spectate": "Spectate",
+    "calamity.book.start": "Start",
+    "spacer.or": "%s or %s",
+    "calamity.book.teams": "Team:",
+    "calamity.book.title": "Calamity by Moesh",
+    "calamity.book.matchOptions.title": "Match options:",
+    "calamity.book.forfeit": "Forfeit",
+    "calamity.book.resetSpawnItem": "Reset spawn item",
+    "calamity.book.hover.resetSpawnItem": "Choose a new respawn item when you respawn",
+    "calamity.book.hover.forfeit": "Vote to end the match [%s]",
+    "calamity.cheated.yourself": "You cheated not only the game, but yourself. You didn't grow. You didn't improve. You took a shortcut and gained nothing. You experienced a hollow victory. Nothing was risked and nothing was gained. It's sad that you don't know the difference.",
+    "calamity.feature.notAvailable": "Not available",
+    "calamity.forfeit.draw": "It's a draw!",
+    "calamity.forfeit.retracted.stopped": "%s has retracted their forfeit vote. Voting stopped.",
+    "calamity.forfeit.retracted": "%s has retracted their forfeit vote. %s out of the needed %s players on the team have voted to forfeit the game.",
+    "calamity.forfeit.started": "%s has voted to forfeit the game. %s out of the needed %s players have voted to forfeit. Use [%s] to vote.",
+    "calamity.forfeit": "%s %s has forfeited!",
+    "calamity.hover.sendTriggerCommand": "Click here to send the command to your text box",
+    "calamity.hover.viewGitHub": "Click to view the GitHub repo",
+    "calamity.joined.team": "%s joined %s",
+    "calamity.left.team": "%s left team %s",
+    "calamity.match.cancelled.byPlayer": "%s %s cancelled a match",
+    "calamity.match.cancelled.noPlayers": "At least one player must be on a team to start a match",
+    "calamity.match.cancelled": "Match %s cancelled",
+    "calamity.match.stats": "%1$s to %2$s. %3$s %4$s won by %5$s points in %6$s!",
+    "calamity.notReady": "Not ready",
+    "calamity.out.of.bounds": "Out of bounds!",
+    "calamity.player.sidelined": "%s has been moved to the sidelines. Nothing has been affected. The match continues!",
+    "calamity.points": "+%s points",
+    "calamity.prestige.blueForfeit.blue": "You've kept your dignity",
+    "calamity.prestige.blueForfeit.red": "Blue knew not to mess with you!",
+    "calamity.prestige.lost": "Lost by %s points",
+    "calamity.prestige.redForfeit.blue": "Red gracefully gave up",
+    "calamity.prestige.redForfeit.red": "You'll live to fight again",
+    "calamity.prestige.won": "Won by %s points",
+    "calamity.ready": "Ready",
+    "calamity.reset.map": "Use [%s] to play again.",
+    "calamity.resetItems.alreadyChosen": "You have already chosen to reset your item next time you respawn.",
+    "calamity.resetItems.haventChosen": "You haven't selected an item yet. Nothing to reset.",
+    "calamity.resetItems": "You will get to select a new item the next time you respawn.",
+    "calamity.resetting": "Resetting to default state",
+    "calamity.generator.output.attackedEffect": "Given [%s%3$s] for %s seconds",
+    "calamity.generator.output.attackEffect": "Sent enemy [%s%3$s] for %s seconds",
+    "calamity.generator.output.effect.level2": " II",
+    "calamity.generator.output.effect": "Given [%s%3$s] for %s seconds",
+    "calamity.generator.output.item": "Given [%s] * %s",
+    "calamity.generator.sign.activated": "Activated!",
+    "calamity.generator.sign.attack": "%s sec. attack",
+    "calamity.generator.sign.enchant": "For main hand",
+    "calamity.generator.sign.perPlayer": "%s per player",
+    "calamity.generator.sign.perTeam": "%s sec. for team",
+    "calamity.generator.sign.progress": "Charging: %s%%",
+    "calamity.generator.sign.ready": "Ready",
+    "calamity.generator.sign.resetting": "Resetting: %s%%",
+    "calamity.generator.sign.type": "[%s%s]",
+    "calamity.generator.statusMessage.chargeSecond": "Charging: %s second left",
+    "calamity.generator.statusMessage.chargeSeconds": "Charging: %s seconds left",
+    "calamity.generator.statusMessage.resettingSecond": "Resetting: %s second left",
+    "calamity.generator.statusMessage.resettingSeconds": "Resetting: %s seconds left",
+    "calamity.seekGlory": "Seek glory or fall to calamity!",
+    "calamity.sidelines": "%s moved to the sidelines",
+    "calamity.startMatch.countdown.lastFiveSeconds": "%s...",
+    "calamity.startMatch.countdown": "Match ▶ begins in %s seconds",
+    "calamity.subtitle.eye.release": "Eye opened",
+    "calamity.subtitle.eye.squish": "Eye squished",
+    "calamity.team.notReady.blue": "%s %s needs a moment %s",
+    "calamity.team.notReady.red": "%s %s says hol' up %s",
+    "calamity.team.ready": "%s %s is ready %s",
+    "calamity.troll": "%s fell in the troll hole! How embarrassing!",
+    "calamity.welcome.objective": "Objective: Collect enough points to reach the score goal. Click %s to view the online readme!",
+    "calamity.welcome": "Welcome to Calamity: Definitive Edition! Created by Moesh.",
+    "book.pageIndicator": "§ov5.0.0",
+    "map.author.name": "Moesh",
+    "arena.calamity.icon": "z",
+    "arena.shattering.icon": "x",
+    "calamity.book.hover.readyTeam": "Toggle your team ready. When both teams are ready, match will start.",
+    "calamity.book.readyTeam": "Ready team",
+    "calamity.match.started.byPlayer": "%s %s started a match",
+    "calamity.book.hover.leaveTeam": "Leave your team. You can still be shuffled onto a team.",
+    "calamity.book.shuffle": "Shuffle players:",
+    "calamity.book.shuffle.all": "all",
+    "calamity.book.shuffle.rest": "rest",
+    "calamity.click.here": "here",
+    "translator.name": "Moesh",
+    "calamity.generator.enchantedItem.valid": "Valid item found! %s given.",
+    "calamity.generator.enchantedItem.invalid": "No valid item found in main hand.",
+    "calamity.generator.enchantedItem.announced": "An %s was created by %s %s!",
+    "calamity.book.toggleGamemode": "Game mode",
+    "calamity.book.toggleGamemode.hover": "Toggle game mode between spectator and adventure",
+    "calamity.goal": "Finish line",
+    "calamity.hover.moesh.twitter": "Open twitter.com/HeartlessMoesh",
+    "calamity.hover.moesh.github": "Open github.com/Moesh",
+    "calamity.hover.discord.DinnerPartyGames": "Join Dinner Party Games on Discord",
+    "calamity.select.respawnItem": "Select your respawn item by using one of these tools.",
+    "calamity.enchanted.item": "Enchanted Item",
+    "calamity.shuffle.error.noAvailablePlayers": "No players are available to be shuffled.",
+    "calamity.book.hover.shuffle.restOfPlayers": "Shuffle players who are not on a team",
+    "calamity.book.hover.shuffle.allPlayers": "Shuffle all players, except spectators",
+    "calamity.shuffle.newTeamAdditions": "Shuffled to %s: %s",
+    "calamity.shuffle.newTeam": "%s: %s",
+    "calamity.shuffle.playerShuffled.rest": "%s shuffled players who were not on a team",
+    "calamity.shuffle.playerShuffled.all": "%s shuffled all players",
+    "calamity.player.sessionID.mismatch": "SessionID mismatch. You will be processed as a new player.",
+    "calamity.subtitle.announcer": "Announcer speaks",
+    "spacer.colon": "%s: %s",
+    "calamity.generator.enchantedItem.alreadyEnchanted": "Item already has this enchantment.",
+    "calamity.generator.enchantedItem.announced.invalid": "%s %s attempted to enchant an item and failed!",
+    "calamity.arena.error.sameArena": "This arena is already selected",
+    "calamity.arena.error.cooldown": "Arena selection is on cooldown"
 }
